server/src/main/java/com/example/scienceops/common/error/ConflictException.java
package com.example.scienceops.common.error;

public class ConflictException extends RuntimeException {

    public ConflictException(String message) {
        super(message);
    }
}
